objects/Success_Message_Setting__mdt.object
<CustomObject>
    <description>This custom metadata is used to configure success message based on specific brand for Brand Forms.
Please provide the custom success message and put &lt;ticketid&gt; where ever you need to keep Ticket Number</description>
    <fields>
        <fullName>Brand_Email__c</fullName>
        <label>Brand Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <description>This field is used to store Name of Brand</description>
        <label>Brand Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field is used to story Case Source Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regards__c</fullName>
        <label>Regards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Message_f__c</fullName>
        <label>Success Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field is used to store type of form</description>
        <inlineHelpText>Represents either Privacy or Brand Form</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Success Message Setting</label>
    <listViews>
        <fullName>All_Privacy</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Brand_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Success_Message_f__c</columns>
        <columns>Regards__c</columns>
        <columns>Brand_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All Privacy</label>
    </listViews>
    <listViews>
        <fullName>Brand_Form_Messages</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Brand_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Success_Message_f__c</columns>
        <columns>Regards__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>B</value>
        </filters>
        <label>Brand Form Messages</label>
    </listViews>
    <listViews>
        <fullName>Brand_Form_Messages_Unsubscribe</fullName>
        <columns>MasterLabel</columns>
        <columns>Brand_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Success_Message_f__c</columns>
        <columns>Regards__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Name__c</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <filters>
            <field>Brand_Name__c</field>
            <operation>startsWith</operation>
            <value>Un</value>
        </filters>
        <label>Privacy Form Messages - Unsubscribe</label>
    </listViews>
    <listViews>
        <fullName>Brand_Form_Success_Message</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>Brand_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Success_Message_f__c</columns>
        <columns>Regards__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>B</value>
        </filters>
        <label>Brand Form Success Message</label>
    </listViews>
    <listViews>
        <fullName>Privacy_Form_Message_Unsubscribe</fullName>
        <columns>MasterLabel</columns>
        <columns>Success_Message_f__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Regards__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <filters>
            <field>Type_of_Request__c</field>
            <operation>startsWith</operation>
            <value>Un</value>
        </filters>
        <label>Privacy Form Message - Unsubscribe</label>
    </listViews>
    <listViews>
        <fullName>Privacy_Form_Messages</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Brand_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Success_Message_f__c</columns>
        <columns>Regards__c</columns>
        <columns>Brand_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <filters>
            <field>Type_of_Request__c</field>
            <operation>startsWith</operation>
            <value>Access</value>
        </filters>
        <label>Privacy Form Messages - Access My Data</label>
    </listViews>
    <listViews>
        <fullName>Privacy_Form_Messages_Delete_My_Data</fullName>
        <columns>MasterLabel</columns>
        <columns>Brand_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Success_Message_f__c</columns>
        <columns>Regards__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <filters>
            <field>Type_of_Request__c</field>
            <operation>startsWith</operation>
            <value>Delete</value>
        </filters>
        <label>Privacy Form Messages - Delete My Data</label>
    </listViews>
    <listViews>
        <fullName>Privacy_Form_Success_Message</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Brand_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Success_Message_f__c</columns>
        <columns>Regards__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <filters>
            <field>Type_of_Request__c</field>
            <operation>startsWith</operation>
            <value>Delete</value>
        </filters>
        <label>Privacy Form - Delete My Data</label>
    </listViews>
    <listViews>
        <fullName>Show_All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Brand_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_of_Request__c</columns>
        <columns>Regards__c</columns>
        <filterScope>Everything</filterScope>
        <label>Show All</label>
    </listViews>
    <pluralLabel>Success Message Settings</pluralLabel>
</CustomObject>